--- a/saml-core-api/pom.xml
+++ b/saml-core-api/pom.xml
@@ -61,6 +61,10 @@
             <groupId>com.sun.xml.messaging.saaj</groupId>
             <artifactId>saaj-impl</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.sun.xml.ws</groupId>
+            <artifactId>rt</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <resources>
